RESOLVED FIXED217295
[LFC][IFC][Soft hyphen] Fix the case when the first content overflows with hyphen
https://bugs.webkit.org/show_bug.cgi?id=217295
Summary [LFC][IFC][Soft hyphen] Fix the case when the first content overflows with hy...
alan
Reported 2020-10-04 08:29:36 PDT
ssia
Attachments
Patch (2.55 KB, patch)
2020-10-04 08:31 PDT, alan
no flags
alan
Comment 1 2020-10-04 08:31:05 PDT
EWS
Comment 2 2020-10-04 09:12:56 PDT
Committed r267947: <https://trac.webkit.org/changeset/267947> All reviewed patches have been landed. Closing bug and clearing flags on attachment 410467 [details].
Radar WebKit Bug Importer
Comment 3 2020-10-04 09:13:23 PDT
Note You need to log in before you can comment on or make changes to this bug.