[LFC][IFC][Soft hyphen] Fix the case when the first content overflows with hyphen https://bugs.webkit.org/show_bug.cgi?id=217295

Reviewed by Antti Koivisto.

* layout/inlineformatting/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::rebuildLineForTrailingSoftHyphen):


Canonical link: https://commits.webkit.org/230056@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267947 268f45cc-cd09-0410-ab3c-d52691b4dbfc